Resolved CAT-2612 & added internal scrollbar for edit params popup.

--- a/client/cat3/src/partials/sections/dashboard/bots/bots.scss
+++ b/client/cat3/src/partials/sections/dashboard/bots/bots.scss
@@ -16,6 +16,10 @@
   padding-bottom: 10px;
 }
 
+.paddingbottom20 {
+  padding-bottom: 20px;
+}
+
 .margintop8 {
   margin-top: 8px;
 }
@@ -34,6 +38,11 @@
 
 #selectInstanceFromDropdown {
   height: 50px;
+}
+
+.param-table {
+  max-height: 400px;
+  overflow-y: auto;
 }
 
 #botLibraryPage, #botAuditTrailPage {
